--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"activationEvents": [
 		"workspaceContains:**/src/components/**"
 	],
-	"main": "./react-component-structure/extension.js",
+	"main": "./extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -45,19 +45,21 @@
 		"pretest": "npm run lint",
 		"test": "vsce package",
 		"vscode:prepublish": "npm run esbuild-base -- --minify",
-		"esbuild-base": "esbuild ./react-component-structure/extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+		"esbuild-base": "esbuild ./extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
 		"esbuild": "npm run esbuild-base -- --sourcemap"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.74.0",
 		"@types/glob": "^8.0.0",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "16.x",
+		"@types/vscode": "^1.74.0",
+		"@vscode/test-electron": "^2.2.0",
 		"eslint": "^8.28.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.1.0",
-		"typescript": "^4.9.3",
-		"@vscode/test-electron": "^2.2.0",
-		"esbuild": "^0.16.9"
+		"typescript": "^4.9.3"
+	},
+	"dependencies": {
+		"esbuild": "^0.16.16"
 	}
 }
