--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "react-component-structure",
 	"displayName": "React component structure",
 	"description": "Create basic strucrure for React component",
+	"icon": "./assets/react-icon-29.png",
 	"version": "1.0.1",
 	"repository": {
 		"type": "git",
@@ -80,7 +81,7 @@
 	"scripts": {
 		"lint": "eslint .",
 		"pretest": "npm run lint",
-		"test": "vsce package",
+		"publish": "vsce package",
 		"vscode:prepublish": "npm run esbuild-base -- --minify",
 		"esbuild-base": "esbuild ./extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
 		"esbuild": "npm run esbuild-base -- --sourcemap"
