--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "React component structure",
 	"description": "Create basic strucrure for React component",
 	"icon": "assets/react-icon-29.png",
-	"version": "2.0.1",
+	"version": "2.5.1",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Vitalii-Volianyk/VSC-React_component"
@@ -26,16 +26,16 @@
 				"title": "New React component"
 			},
 			{
-				"command": "react-component-structure.refactor",
-				"title": "Refactor to function"
+				"command": "react-component-structure.createEmotionComponent",
+				"title": "New React Emotion component"
 			}
 		],
 		"menus": {
 			"explorer/context": [
 				{
-					"command": "react-component-structure.refactor",
+					"command": "react-component-structure.createEmotionComponent",
 					"group": "navigation",
-					"title": "Refactor to function"
+					"title": "New React Emotion component"
 				},
 				{
 					"command": "react-component-structure.createComponent",
