--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "React component structure",
 	"description": "Create basic strucrure for React component",
 	"icon": "assets/react-icon-29.png",
-	"version": "3.0.1",
+	"version": "3.5.1",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Vitalii-Volianyk/VSC-React_component"
@@ -107,6 +107,7 @@
 		"typescript": "^4.9.3"
 	},
 	"dependencies": {
+		"@vscode/vsce": "^2.22.0",
 		"esbuild": "^0.16.16"
 	}
 }
