--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
 		}
 	},
 	"scripts": {
-		"lint": "eslint .",
 		"pretest": "npm run lint",
 		"publish": "vsce package",
 		"vscode:prepublish": "npm run esbuild-base -- --minify",
@@ -83,13 +82,11 @@
 		"@types/node": "16.x",
 		"@types/vscode": "^1.65.2",
 		"@vscode/test-electron": "^2.2.0",
-		"eslint": "^8.28.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.1.0",
 		"typescript": "^4.9.3"
 	},
 	"dependencies": {
-		"@vscode/vsce": "^2.22.0",
-		"esbuild": "^0.16.16"
+		"@vscode/vsce": "^2.22.0"
 	}
 }
