--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,12 +2,8 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "ES2020",
-		"checkJs": true,  /* Typecheck .js files. */
-		"lib": [
-			"ES2020"
-		]
+		"checkJs": true /* Typecheck .js files. */,
+		"lib": ["ES2020"]
 	},
-	"exclude": [
-		"node_modules"
-	]
+	"exclude": ["node_modules"]
 }
