--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "react-component-structure",
 	"displayName": "Create project structure",
-	"description": "Create filese/folder structure from templates for any project",
+	"description": "Create files/folder structure from templates for any project",
 	"icon": "assets/VSC/icon.png",
-	"version": "4.0.2",
+	"version": "4.0.3",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Vitalii-Volianyk/VSC-React_component"
@@ -30,7 +30,7 @@
 		"menus": {
 			"explorer/context": [
 				{
-					"command": "react-component-structure.editStructure",
+					"command": "structure_creation.editStructure",
 					"group": "navigation",
 					"title": "New ReactJS Emotion component"
 				}
